# pytest-selenium

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Pipfile  README.md  README.rst  appveyor.yml  docker-compose.arm.yml  docker-compose.intel.yml  html_report.py  old-ci.yml  pyproject.toml  pytest_mozwebqa.py  sauce_labs.yaml  save.py  setup.cfg  setup.py  start  stop  tox.ini
.github/workflows/: main.yml  nightly.yml  publish.yml  test.yml
docker/: Dockerfile  docker-compose.yml  start  webserver.py
docs/: Makefile  conf.py  development.rst  index.rst  installing.rst  make.bat  news.rst  user_guide.rst
installation/: chromedriver.sh  geckodriver.sh
mozwebqa/: __init__.py  mozwebqa.py
pytest_mozwebqa/: __init__.py  credentials.py  driver.py  html_report.py  pytest_mozwebqa.py  safety.py  sauce_labs.py  selenium_client.py
pytest_mozwebqa/cloud/: __init__.py  browserstack.py  saucelabs.py
pytest_mozwebqa/resources/: main.js  style.css
pytest_selenium/: __init__.py  driver.py  exceptions.py  hooks.py  pytest_selenium.py  safety.py
pytest_selenium/cloud/: __init__.py  base.py  browserstack.py  saucelabs.py  testingbot.py
pytest_selenium/drivers/: __init__.py  appium.py  browserstack.py  chrome.py  cloud.py  crossbrowsertesting.py  edge.py  firefox.py  internet_explorer.py  phantomjs.py  remote.py  safari.py  saucelabs.py  testingbot.py
src/pytest_selenium/: __init__.py  exceptions.py  pytest_selenium.py  safety.py  utils.py
src/pytest_selenium/drivers/: __init__.py  appium.py  browserstack.py  chrome.py  crossbrowsertesting.py  edge.py  firefox.py  internet_explorer.py  remote.py  safari.py  saucelabs.py  testingbot.py
test/: index.html  test_selenium.py  webserver.py
testing/: README.md  conftest.py  empty.xpi  test_base_url.py  test_browserstack.py  test_capabilities.py  test_chrome.py  test_credentials.py  test_crossbrowsertesting.py  test_debug.py  test_destructive.py  test_driver.py  test_driver_log.py  test_edge.py  test_firefox.py  test_metadata.py  test_opera.py  test_phantomjs.py  test_rc_client.py  test_remote.py  test_report.py  test_safari.py  test_saucelabs.py  test_startup.py  test_testingbot.py  test_timeout.py  test_usage.py  test_verify_base_url.py  test_webdriver.py  test_webdriver_client.py  webserver.py
