[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.13",
]

[project]
name = "pytest-selenium"
description = "pytest plugin for Selenium"
readme = "README.rst"
license = "MPL-2.0"
requires-python = ">=3.8"
keywords = [
  "pytest",
  "selenium",
  "saucelabs",
  "browserstack",
  "webqa",
  "qa"
]
authors = [
  { name = "Dave Hunt", email =  "dhunt@mozilla.com" },
  { name = "Jim Brannlund", email = "jimbrannlund@fastmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dependencies = [
  "pytest>=6.0.0",
  "pytest-base-url>=2.0.0",
  "pytest-html>=4.0.0",
  "pytest-variables>=2.0.0",
  "requests>=2.26.0",
  "selenium>=4.10.0",
  "tenacity>=6.0.0",
]
dynamic = [
  "version",
]

[project.optional-dependencies]
appium = [ "appium-python-client>=1.0.0" ]
test = [
  "pytest-xdist>=2.4.0",
  "pytest-mock>=3.6.1",
  "black>=22.1.0",
  "flake8>=4.0.1",
  "pre-commit>=2.17.0",
  "tox>=3.24.5",
]

[project.urls]
Homepage = "https://github.com/pytest-dev/pytest-selenium"
Tracker = "https://github.com/pytest-dev/pytest-selenium/issues"
Source = "https://github.com/pytest-dev/pytest-selenium"

[project.entry-points.pytest11]
selenium = "pytest_selenium.pytest_selenium"
selenium_safety = "pytest_selenium.safety"
browserstack_driver = "pytest_selenium.drivers.browserstack"
crossbrowsertesting_driver = "pytest_selenium.drivers.crossbrowsertesting"
chrome_driver = "pytest_selenium.drivers.chrome"
edge_driver = "pytest_selenium.drivers.edge"
firefox_driver = "pytest_selenium.drivers.firefox"
ie_driver = "pytest_selenium.drivers.internet_explorer"
remote_driver = "pytest_selenium.drivers.remote"
safari_driver = "pytest_selenium.drivers.safari"
saucelabs_driver = "pytest_selenium.drivers.saucelabs"
testingbot_driver = "pytest_selenium.drivers.testingbot"
appium_driver = "pytest_selenium.drivers.appium"

[tool.hatch.envs.test]
features = [
  "test",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/pytest_selenium/__version.py"
